add picture in 16/9 and dev notes